# Lab_ParallelComputingAlgorithm

./: CMakeLists.txt  main.cpp  test_file_1.txt
